implemented functionality to list all the questions with answers based on category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         </button>
 
         <nav class="nav container" style=" padding: 25px 60px;">
-            <h2 class="nav_logo text"><a href="#"><a style="color: black;"><b>Blog</b></a><a
+            <h2 class="nav_logo text"><a><a style="color: black;"><b>Blog</b></a><a
                         style="color:#f12b20;"><b>Stack</b></a></a></h2>
             <!-- <div class="menu_items" *ngIf="role!='admin'">
                 <div class="container" style="padding-right: 600px;">
